--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,12 +1,13 @@
-FROM python:3.13-alpine
+FROM python:3.12-alpine
 
 WORKDIR /app
 
 COPY requirements.txt .
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r  requirements.txt
 
-COPY . .
+COPY app.py .
+COPY static/upload.html upload.html
 
 EXPOSE 8000
 
