Refactoring, add db, add class DBManager

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -1,30 +1,47 @@
 http {
     include mime.types;
-
+    client_max_body_size 5M;
 
     server {
-        root /etc/nginx/html;
-        listen 80;
+        root    /usr/share/nginx/html;
+        listen  80;
 
-        location / {
+        location =/ {
             index index.html;
         }
 
-        location /upload {
-            proxy_pass http://app:8000/upload;
+        location =/upload/ {
+            index upload.html;
+        }
+
+        location =/api/upload {
+            proxy_pass http://app:8000/upload/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded_For $proxy_add_x_forwarded_for;
         }
 
         location =/images/ {
             index images.html;
         }
 
-        location ~\/images\/.*.(gif|jpg|png|jpeg)$ {
+        location =/api/images/ {
+            proxy_pass http://app:8000/get_images/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded_For $proxy_add_x_forwarded_for;
+        }
+
+        location = ~\/images\/.*.(gif|jpg|png|jpeg)$ {
             root /;
         }
+
+        location = /sting.jpg {
+            alias /usr/share/nginx/html/sting.jpg;
+        }
+
         location = /favicon.ico {
-            alias /etc/nginx/html/favicon.ico;
+            alias /usr/share/nginx/html/favicon.ico;
         }
     }
 }
