--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -38,6 +38,19 @@ http {
             root /;
         }
 
+        location =/images-list/ {
+            index imageslist.html;
+        }
+
+        location ~* ^/api/images-list/(.*) {
+            proxy_pass http://app:8000/$uri;
+            proxy_http_version 1.1;
+            proxy_set_header Query-String $query_string;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded_For $proxy_add_x_forwarded_for;
+        }
+
         location = /sting.jpg {
             alias /usr/share/nginx/html/sting.jpg;
         }
